fix(requires-meta-mask-page): overflow
Fixes #3

--- a/src/containers/requires-meta-mask-page/requires-meta-mask-page.scss
+++ b/src/containers/requires-meta-mask-page/requires-meta-mask-page.scss
@@ -1,5 +1,8 @@
 /* @define RequiresMetaMaskPage */
 .RequiresMetaMaskPage {
+  height: 100%;
+  overflow-y: scroll;
+
   // stylelint-disable-next-line plugin/selector-bem-pattern
   &-FAQ {
     padding: 40px 20%;
